--- a/Python/modulo1_tema4_Py_60_anexo.ipynb
+++ b/Python/modulo1_tema4_Py_60_anexo.ipynb
@@ -262,16 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "people_df.loc[(people_df[\"gender\"].isin(['n/a', 'none'])) | people_df[\"gender\"].isna(),\"gender\"] = 'none'\n",
-    "planets_df[\"temperate_tropical\"] = planets_df.climate.apply(lambda x: (\"temperate\" in x) or (\"tropical\" in x)).astype(int)\n",
-    "\n",
-    "# cambiar varaible birth_year por Age.\n",
-    "# cambiar UTL de homeworld por nombre\n",
-    "# cambiar utl piloto por nombre"
+    "planets_df[\"temperate_tropical\"] = planets_df.climate.apply(lambda x: (\"temperate\" in x) or (\"tropical\" in x)).astype(int)\n"
    ]
   },
   {
