--- a/Python/modulo1_tema4_Py_40_contr_flujo.ipynb
+++ b/Python/modulo1_tema4_Py_40_contr_flujo.ipynb
@@ -37,9 +37,7 @@
    "source": [
     "# CONTROL DE FLUJO\n",
     "\n",
-    "Las herramientas de control de flujo permiten automatizar tareas. En este capítulo se trabajarán las funciones condicionales y bucles.\n",
-    "\n",
-    "Para trabajar con datos de ejemplo, a continuación se cargan los datos de planetas vistos en el capítulo de Pandas."
+    "Las herramientas de control de flujo permiten automatizar tareas. En este capítulo se trabajarán las funciones condicionales y bucles."
    ]
   },
   {
@@ -426,7 +424,7 @@
     "\n",
     "En el capítulo de los [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb) se ha introducido la estructura básica *if-else*. \n",
     "\n",
-    "En el capítulo [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb) se ha utilizado la escritura i-else en las *list comprehension*."
+    "En el capítulo [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb) se ha utilizado la escritura if-else en las *list comprehension*."
    ]
   },
   {
@@ -633,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Observa**: esta función de numpy pertenece a las funciones ufunc, ya que aplica elemento a elemento. Observa también que se ha aplicado a una serie de un DataFrame, obteniendo una nueva serie."
+    "> **Observa**: esta función de numpy aplica elemento a elemento. Observa también que se ha aplicado a una serie de un DataFrame, obteniendo una nueva serie."
    ]
   },
   {
@@ -644,7 +642,7 @@
     "\n",
     "Los bucles for, se han tratado de forma básica en las *list comprehension* del capítulo de [Listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb).\n",
     "\n",
-    "Una forma de definir bucles con for es a través de listas, diccionarios."
+    "Una forma de definir bucles con for es a través de listas y diccionarios."
    ]
   },
   {
@@ -778,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para iterar **por columnas** de un DataFrame se utiliza `.iteritems()`. En cada iteración se obtiene la tupla`(nombre columna, Serie Columna)`. "
+    "Para iterar **por columnas** de un DataFrame se utiliza `.iteritems()`. En cada iteración se obtiene la tupla`(nombre columna, valor serie)`. "
    ]
   },
   {
