--- a/Python/modulo1_tema4_Py_10_elem_bas.ipynb
+++ b/Python/modulo1_tema4_Py_10_elem_bas.ipynb
@@ -369,8 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 566 µs, sys: 43 µs, total: 609 µs\n",
-      "Wall time: 616 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -394,7 +393,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.99 ms, sys: 0 ns, total: 1.99 ms\n",
       "Wall time: 2 ms\n"
      ]
     }
@@ -429,14 +427,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "holaMundo.py\t\t\t      modulo1_tema4_Py_40_contr_flujo.ipynb\r\n",
-      "modulo1_tema4_Py_00_indice.ipynb      modulo1_tema4_Py_50_gest_dat.ipynb\r\n",
-      "modulo1_tema4_Py_10_elem_bas.ipynb    modulo1_tema4_Py_60_anexo.ipynb\r\n",
-      "modulo1_tema4_Py_20_matplotlib.ipynb  modulo1_tema4_Py.ipynb\r\n",
-      "modulo1_tema4_Py_30_colec_obj.ipynb   README.md\r\n",
-      "modulo1_tema4_Py_31_numpy.ipynb       requirementsColab.txt\r\n",
-      "modulo1_tema4_Py_32_pandas.ipynb      www\r\n",
-      "modulo1_tema4_Py_32_pandas.Rmd\r\n"
+      " El volumen de la unidad C es Local Disk\n",
+      " El n£mero de serie del volumen es: 70D9-AE2E\n",
+      "\n",
+      " Directorio de C:\\Users\\usuari\\Documents\\GitHub\\mbdds_fc20\\Python\n",
+      "\n",
+      "12/09/2020  12:02    <DIR>          .\n",
+      "12/09/2020  12:02    <DIR>          ..\n",
+      "12/09/2020  11:59    <DIR>          .ipynb_checkpoints\n",
+      "08/09/2020  15:38                23 holaMundo.py\n",
+      "12/09/2020  11:11            36.419 modulo1_tema4_Py.ipynb\n",
+      "12/09/2020  11:12             2.034 modulo1_tema4_Py_00_indice.ipynb\n",
+      "12/09/2020  11:24            18.039 modulo1_tema4_Py_10_elem_bas.ipynb\n",
+      "12/09/2020  11:41           316.924 modulo1_tema4_Py_20_matplotlib.ipynb\n",
+      "12/09/2020  11:44            24.675 modulo1_tema4_Py_30_colec_obj.ipynb\n",
+      "12/09/2020  11:48            63.099 modulo1_tema4_Py_31_numpy.ipynb\n",
+      "12/09/2020  11:53           169.241 modulo1_tema4_Py_32_pandas.ipynb\n",
+      "12/09/2020  11:54            31.676 modulo1_tema4_Py_40_contr_flujo.ipynb\n",
+      "12/09/2020  12:01           276.232 modulo1_tema4_Py_50_gest_dat.ipynb\n",
+      "08/09/2020  15:38            15.658 modulo1_tema4_Py_60_anexo.ipynb\n",
+      "12/09/2020  10:59    <DIR>          old\n",
+      "08/09/2020  15:38             1.914 README.md\n",
+      "08/09/2020  15:38             1.855 requirementsColab.txt\n",
+      "12/09/2020  11:17    <DIR>          Rmd\n",
+      "11/09/2020  17:55    <DIR>          www\n",
+      "              13 archivos        957.789 bytes\n",
+      "               6 dirs   2.359.828.480 bytes libres\n"
      ]
     }
    ],
