--- a/R/modulo1_tema4_R_05_gest_dat.Rmd
+++ b/R/modulo1_tema4_R_05_gest_dat.Rmd
@@ -1,3 +1,21 @@
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(knitr)
+library(pander)
+library(kableExtra)
+library(datos)
+library(ggrepel)
+suppressPackageStartupMessages(library(tidyverse))
+panderOptions('table.split.table', Inf)
+panderOptions('decimal.mark', ",")
+panderOptions('big.mark', ".")
+panderOptions('missing', "")
+options(knitr.kable.NA = '')
+
+#En libreoffice para eliminar las lineas con resultados: 
+#  Reemplazar > expresiones regulares > ##.*
+paises07 <- as.data.frame(paises %>% filter(anio==2007))
+```
 
 ## GESTIÓN DE DATOS
 
