--- a/Python/Rmd/modulo1_tema4_Py_30_colec_obj.Rmd
+++ b/Python/Rmd/modulo1_tema4_Py_30_colec_obj.Rmd
@@ -220,7 +220,7 @@ print("Quiero el bacon {} y {} huevos".format(bacon,huevos))
 
 > **Recuerda**: Son inmutables. Una vez fijado su valor, ya no tiene sentido modificarlo!
 
-### RANGOS
+#### RANGOS
 
 Son un caso especial de tuplas, definidas como secuencias.
 
