--- a/Python/modulo1_tema4_Py_31_numpy.ipynb
+++ b/Python/modulo1_tema4_Py_31_numpy.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NUMPY\n",
+    "# NUMPY\n",
     "\n",
     "El package [numpy](https://numpy.org/) es la solución más popular dentro de Python para realizar computación científica.\n",
     "\n",
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TIPO DE DATOS EN NUMPY\n",
+    "### TIPO DE DATOS EN NUMPY\n",
     "Habitualmente se crean a partir de listas o tuplas con elementos homogéneos."
    ]
   },
@@ -596,11 +596,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### FUNCIONES UNIVERSALES\n",
+    "### FUNCIONES UNIVERSALES\n",
     "\n",
     "En numpy las funciones universales o *ufunc*, son un conjunto de funciones vectorizan, es decir, que al aplicarlas sobre un objeto numpy, esta función, se aplica sobre cada uno de los elementos que lo componen. \n",
     "\n",
-    "> **Recuerda**: Ya se comentó las funciones que vectorizan en el el capitulo de funciones de R. \n",
+    "> **Recuerda**: Ya se comentó las funciones que vectorizan en el capitulo de funciones de R. \n",
     "\n",
     "Típicamente, las funciones de este tipo son las funciones aritméticas."
    ]
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### SECUENCIAS EN NUMPY\n",
+    "### SECUENCIAS EN NUMPY\n",
     "\n",
     "La función propia de numpy es `np.arange(ini,fin,paso)`"
    ]
@@ -830,7 +830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### DIMENSIONES EN NUMPY"
+    "### DIMENSIONES EN NUMPY"
    ]
   },
   {
@@ -911,7 +911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### FILTROS EN NUMPY\n",
+    "### FILTROS EN NUMPY\n",
     "\n",
     "Siguen las mismas reglas que en las listas, pero ahora con más dimensiones"
    ]
@@ -969,7 +969,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### FILTROS SLICING"
+    "#### FILTROS SLICING"
    ]
   },
   {
@@ -1141,8 +1141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### INDEXACIÓN ELEGANTE\n",
-    "###### FILTROS POSICIONALES\n",
+    "#### INDEXACIÓN ELEGANTE\n",
+    "##### FILTROS POSICIONALES\n",
     "\n",
     "Otra mejora respecto a las listas es la capacidad de indexar por una lista o array.\n",
     "\n",
@@ -1285,7 +1285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### FILTROS LÓGICOS \n",
+    "##### FILTROS LÓGICOS \n",
     "\n",
     "Otro mecanismo *fancy indexing* son los filtros lógicos. \n",
     "\n",
@@ -1433,7 +1433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### OPERACIONES BOOLEANAS\n",
+    "##### OPERACIONES BOOLEANAS\n",
     "\n",
     "Se utilizan los `&`, `|` y `~` en vez de los `and`, `or`, `not` (respec.) utilizados en los tipos lógicos. Es necesario cerrar las expresiones entre paréntesis. \n",
     "\n",
