--- a/Python/modulo1_tema4_Py_32_pandas.ipynb
+++ b/Python/modulo1_tema4_Py_32_pandas.ipynb
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ÍNDEXADORES: LOC, ILOC\n",
+    "#### ÍNDEXADORES: LOC, ILOC\n",
     "\n",
     "Se utilizan para modificar el comportamiento de los filtros.\n",
     "\n",
@@ -1221,7 +1221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GESTIÓN DE COLUMNAS EN DATAFRAMES"
+    "#### GESTIÓN DE COLUMNAS EN DATAFRAMES"
    ]
   },
   {
@@ -3378,7 +3378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ACTIVIDAD GUIADA 2.3\n",
+    "##### ACTIVIDAD GUIADA 2.4\n",
     "\n",
     "Ahora tenemos todas las herramientas para resolver la actividad.\n",
     "\n",
