--- a/Python/modulo1_tema4_Py_50_gest_dat.ipynb
+++ b/Python/modulo1_tema4_Py_50_gest_dat.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "La forma más simple de importar datos estructurados (en forma de matriz de filas y columnas), es a través de los DataFrames. El motivo es simple, estos objetos permiten almacenar datos de distinto tipo en un único objeto o tabla de datos.\n",
     "\n",
-    "### LECTURA TEXTO CON SEPARADOR\n",
+    "#### LECTURA TEXTO CON SEPARADOR\n",
     "\n",
     "Para leer el siguiente fichero de texto:"
    ]
@@ -716,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ESCRITURA TEXTO CON SEPARADOR\n",
+    "#### ESCRITURA TEXTO CON SEPARADOR\n",
     "\n",
     "Para la escritura, puedes utilizar sus equivalentes: `.to_csv()`. Cabe destacar algunas pequeñas variaciones.  "
    ]
@@ -781,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LECTURA Y ESCRITURA EN FORMATO PICKLE\n",
+    "#### LECTURA Y ESCRITURA EN FORMATO PICKLE\n",
     "\n",
     "Los objetos Python se pueden hacer persistentes en disco con el formato pickle.\n",
     "\n",
@@ -857,7 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CRUCES POR ORDENACIÓN SIN ÍNDICE COMPARTIDO\n",
+    "#### CRUCES POR ORDENACIÓN SIN ÍNDICE COMPARTIDO\n",
     "\n",
     "Una forma de cruzar 2 DataFrames es a partir de la ordenación compartida, ya sea de las filas o las columnas."
    ]
@@ -866,7 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ORDENACIÓN DE TABLAS\n",
+    "##### ORDENACIÓN DE TABLAS\n",
     "\n",
     "Para ordenar una serie, se utiliza el método `.sort.values()`."
    ]
@@ -1041,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### UNIÓN POR COLUMNAS SIN ÍNDICE COMPARTIDO\n",
+    "##### UNIÓN POR COLUMNAS SIN ÍNDICE COMPARTIDO\n",
     "\n",
     "Para unir las columnas de dos DataFrames que comparten ordenación utiliza `pd.concat()`.\n",
     "\n",
@@ -1359,7 +1359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### UNIÓN POR FILAS\n",
+    "###### UNIÓN POR FILAS\n",
     "\n",
     "Para unir dos DataFrames con la misma ordenación de sus columnas, se puede utilizar pd.concat, aunque es más directo con el método `.append()`."
    ]
@@ -1567,11 +1567,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CRUCE POR CAMPOS CLAVE\n",
+    "#### CRUCE POR CAMPOS CLAVE\n",
     "\n",
     "Antes de realizar un cruce por campos clave es importante saber si éste tiene valores duplicados. \n",
     "\n",
-    "#### VECTOR DE CLAVES\n",
+    "##### VECTOR DE CLAVES\n",
     "\n",
     "Para obtener las claves únicas de una serie o DataFrame utiliza `.unique()`."
    ]
@@ -1768,7 +1768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### FUSIÓN CON CLAVES\n",
+    "##### FUSIÓN CON CLAVES\n",
     "\n",
     "Para cruzar 2 tablas con claves, utiliza `pd.merge()`."
    ]
@@ -1777,7 +1777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### INNER JOIN\n",
+    "###### INNER JOIN\n",
     "\n",
     "Recordemos que inner join consiste en construir una tabla que tenga claves coincidentes en las tablas.\n",
     "\n",
@@ -2424,7 +2424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### OUTER JOIN\n",
+    "###### OUTER JOIN\n",
     "\n",
     "Para conservar **todos los registros de las tablas originales**, tanto de la tabla izquierda como derecha, coincida o no, se utiliza el parámetro `how = \"outer\"`."
    ]
@@ -2858,7 +2858,7 @@
    "source": [
     "Observa ahora, no ha descartado ningún registro de las tablas origen. Además, ha rellenado con `NaN` los campos que no cruzan. Este comportamiento en SQL es conocido como *FULL JOIN* o *OUTTER JOIN* .\n",
     "\n",
-    "##### LEFT JOIN\n",
+    "###### LEFT JOIN\n",
     "\n",
     "Para imponer que conserve **todos los valores origen de la tabla izquierda** y que descarte los de la taba derecha que no sean compartidos utiliza `how=\"left\"`."
    ]
@@ -3099,7 +3099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### RIGHT JOIN\n",
+    "###### RIGHT JOIN\n",
     "\n",
     "Para preservar **todos los valores de la tabla derecha** utiliza `how=\"right\"`."
    ]
@@ -3448,7 +3448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### DEFINCIÓN DE LAS CLAVES\n",
+    "###### DEFINCIÓN DE LAS CLAVES\n",
     "\n",
     "Cuando las claves son campos comunes no es necesario definir los campos `left_on` y `right_on`. \n",
     "\n",
@@ -3468,7 +3468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DESCRIBE\n",
+    "#### DESCRIBE\n",
     "\n",
     "Para tener una primera impresión sobre las estadísticas de un DataFrame se utiliza `.describe()`.\n",
     "\n",
@@ -3980,7 +3980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ESTADÍSTICOS BASICOS\n",
+    "#### ESTADÍSTICOS BASICOS\n",
     "\n",
     "Para calcular los estadísticos mostrados en la función `.describe()` con funciones numpy:"
    ]
@@ -4141,9 +4141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TABLAS DE FRECUENCIAS\n",
+    "#### TABLAS DE FRECUENCIAS\n",
     "\n",
-    "#### FRECUENCIAS DE UNA VARIABLE\n",
+    "##### FRECUENCIAS DE UNA VARIABLE\n",
     "\n",
     "Para obtener las frecuencias de una serie pandas se utiliza `.value_counts()`."
    ]
@@ -4217,7 +4217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TABLAS CRUZADAS\n",
+    "##### TABLAS CRUZADAS\n",
     "\n",
     "Para obtener las frecuencias de dos variables utiliza `pd.crosstab()`."
    ]
@@ -4342,7 +4342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TRAMEAR VARIABLES\n",
+    "##### TRAMEAR VARIABLES\n",
     "\n",
     "En pandas series se puede tramear una variable con la función `pd.cut()`"
    ]
@@ -4690,7 +4690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ACTIVIDAD GUIADA 2.5\n",
+    "##### ACTIVIDAD GUIADA 2.5\n",
     "\n",
     "Veamos ahora, un resumen de la altura de los personajes por el tipo de clima de su planeta.\n",
     "\n",
