--- a/Python/modulo1_tema4_Py_60_anexo.ipynb
+++ b/Python/modulo1_tema4_Py_60_anexo.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "## PREPARACIÓN ENTORNO LOCAL-JUPYTER (OPCIONAL)\n",
     "\n",
-    "### CLONAR REPOSITORIO\n",
+    "#### CLONAR REPOSITORIO\n",
     "\n",
     "En local puedes utilizar el mismo proyecto que has clonado en el [README DE R](../R/README.md). \n",
     "\n",
@@ -65,7 +65,7 @@
     "cd Python\n",
     "```\n",
     "\n",
-    "### CREAR EN LOCAL UN NUEVO ENVIRONMENT DE ANACONDA\n",
+    "#### CREAR EN LOCAL UN NUEVO ENVIRONMENT DE ANACONDA\n",
     "\n",
     "Abrimos una línea de comandos (con *Anaconda 3.0* ya disponible).\n",
     "\n",
@@ -84,7 +84,7 @@
     "conda info --envs\n",
     "```\n",
     "\n",
-    "### INSTALA LAS LIBRERIAS DE PYTHON\n",
+    "#### INSTALA LAS LIBRERIAS DE PYTHON\n",
     "\n",
     "```\n",
     "cd mbdds_fc20/Python\n",
@@ -92,7 +92,7 @@
     "python -m pip install -r requirementsColab.txt\n",
     "```\n",
     "\n",
-    "### PUBLICAR EL KERNEL\n",
+    "#### PUBLICAR EL KERNEL\n",
     "\n",
     "Para acceder al nuevo environment desde Jupyter necesitas publicar el kernel.\n",
     "\n",
@@ -102,7 +102,7 @@
     "\n",
     "Puede tardar unos minutos en publicarse.\n",
     "\n",
-    "### LANZAR ENTORNO JUPYTER NOTEBOOK\n",
+    "#### LANZAR ENTORNO JUPYTER NOTEBOOK\n",
     "\n",
     "Para acceder al servidor Jupyter. \n",
     "\n",
